[gd_scene load_steps=26 format=2]

[ext_resource path="res://textures/freescifiplatform/png/Tiles/Tile (3).png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/freescifiplatform/png/Tiles/Tile (1).png" type="Texture" id=3]
[ext_resource path="res://textures/freescifiplatform/png/Tiles/Tile (13).png" type="Texture" id=4]
[ext_resource path="res://textures/freescifiplatform/png/Tiles/Tile (15).png" type="Texture" id=5]
[ext_resource path="res://textures/freescifiplatform/png/Tiles/Tile (14).png" type="Texture" id=6]
[ext_resource path="res://textures/freescifiplatform/png/Tiles/Tile (12).png" type="Texture" id=7]
[ext_resource path="res://textures/freescifiplatform/png/Tiles/Tile (2).png" type="Texture" id=8]
[ext_resource path="res://scripts/CameraControler.gd" type="Script" id=9]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/SpaceLvl.gd" type="Script" id=11]
[ext_resource path="res://scenes/Portal.tscn" type="PackedScene" id=12]
[ext_resource path="res://textures/death_star.png" type="Texture" id=13]
[ext_resource path="res://scripts/StaticDanger.gd" type="Script" id=14]
[ext_resource path="res://textures/freescifiplatform/png/Tiles/Spike.png" type="Texture" id=15]
[ext_resource path="res://textures/freescifiplatform/png/Tiles/BGTile (3).png" type="Texture" id=16]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 256, 64, 0, 64, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 256, 64, 0, 64, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 256, 64, 0, 64, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 256, 64, 0, 64, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 256, 64, 0, 64, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 256, 64, 0, 64, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 256, 64, 0, 64, 0, 0, 256, 0 )

[sub_resource type="TileSet" id=8]
0/name = "Tile (1).png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tile (3).png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 256, 256 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Tile (2).png 2"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 256, 256 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Tile (12).png 3"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 256, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Tile (13).png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 256, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 5 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Tile (14).png 5"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 256, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 6 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Tile (15).png 6"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 256, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 7 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "BGTile (3).png 7"
7/texture = ExtResource( 16 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 224, 224 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 37.8518, 12.496 )

[node name="SpaceLvl" type="Node"]
script = ExtResource( 11 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 63.428, 439.537 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.25, 0.25 )
tile_set = SubResource( 8 )
format = 1
tile_data = PoolIntArray( 589888, 4, 0, 589892, 3, 0, 917636, 5, 0, 917639, 6, 0, 917642, 6, 0, 917645, 6, 0, 917648, 3, 0, 983196, 5, 0, 983199, 6, 0, 983202, 3, 0, 1245234, 5, 0, 1245238, 3, 0, 1310819, 5, 0, 1310822, 6, 0, 1310825, 3, 0, 1441978, 5, 0, 1441981, 5, 0, 1441984, 6, 0, 1441987, 6, 0, 1441990, 6, 0, 1441993, 3, 0, 1638523, 4, 0, 1703959, 5, 0, 1703962, 3, 0, 1704019, 5, 0, 1704022, 4, 0, 1704154, 2, 0, 1704158, 2, 0, 1704176, 2, 0, 1769502, 2, 0, 1769505, 0, 0, 1900556, 1, 0, 1900559, 0, 0, 2031648, 7, 0, 2228226, 2, 0, 2228256, 7, 0, 2228267, 1, 0, 2228270, 0, 0, 2228298, 2, 0, 2228342, 2, 0, 2359374, 4, 0, 2359378, 4, 0, 2359382, 4, 0, 2359386, 4, 0, 2359390, 4, 0, 2359394, 4, 0, 2359398, 4, 0, 2359402, 4, 0, 2359406, 4, 0, 2359410, 4, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 514, 300 )
current = true
script = ExtResource( 9 )

[node name="HUD" parent="." instance=ExtResource( 10 )]

[node name="Portal" parent="." instance=ExtResource( 12 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 600 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 513.5, 294.5 )
scale = Vector2( 0.888118, 0.744975 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticDanger" type="Area2D" parent="."]
position = Vector2( 510, 428 )
scale = Vector2( 1.4, 1 )
script = ExtResource( 14 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="StaticDanger"]
position = Vector2( 18, 0 )
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="StaticDanger"]
position = Vector2( 16, -9 )
scale = Vector2( 0.28125, 0.203125 )
texture = ExtResource( 15 )

[node name="StaticDanger2" type="Area2D" parent="."]
position = Vector2( 719, 531 )
scale = Vector2( 1.4, 1 )
script = ExtResource( 14 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="StaticDanger2"]
position = Vector2( 18, 0 )
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="StaticDanger2"]
position = Vector2( 16, -9 )
scale = Vector2( 0.28125, 0.203125 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="health_changed" from="Player" to="." method="_on_Player_health_changed"]
[connection signal="body_entered" from="Portal" to="." method="_on_Portal_body_entered"]
[connection signal="body_entered" from="StaticDanger" to="StaticDanger" method="_on_StaticDanger_body_entered"]
[connection signal="body_entered" from="StaticDanger2" to="StaticDanger2" method="_on_StaticDanger_body_entered"]
